--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   <a href="https://bowen.finance/" class="btn btn--info">Portfolio</a>  
   <br>
-  <a href="https://www.GitHub.com/donbowen/">GitHub</a>  
+  <a href="https://www.GitHub.com/yal521/">GitHub</a>  
   <br>
   <a href="https://www.GitHub.com/donbowen/">Twitter</a>  
   <br>
