--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Yang Liu # your name (or website title) here
+logo: "/images/6391649079771_.pic.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Edit these links below   
   <br>
