--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,15 @@
 title: Yang Liu # your name (or website title) here
 logo: "/images/YangLiu.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Edit these links below   
+   
   <br>
   in _config.yml 
   <br><br>
-  <a href="https://www.linkedin.com/in/donbowen-lehigh/">LinkedIn</a> 
+  <a href="https://www.linkedin.com/in/yang-liu-715194217/">LinkedIn</a> 
   <br>
   <a href="https://bowen.finance/cv/" class="btn btn--info">Resume</a>  
   <br>
   <a href="https://bowen.finance/" class="btn btn--info">Portfolio</a>  
   <br>
-  <a href="https://www.GitHub.com/yal521/">GitHub</a>  
-  <br>
-  <a href="https://www.GitHub.com/donbowen/">Twitter</a>  
-  <br>
-  <a href="https://www.GitHub.com/donbowen/">Youtube</a> 
-  
+  <a href="https://github.com/yal521">GitHub</a>  
 theme: jekyll-theme-minimal
